--- a/bsir2465/pom.xml
+++ b/bsir2465/pom.xml
@@ -172,7 +172,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>tasks.view.Main</mainClass>
+                    <mainClass>tasks.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
