--- a/lab5/serenity.properties
+++ b/lab5/serenity.properties
@@ -4,6 +4,8 @@
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
 
+#serenity.driver.capabilities="browserName:iphone; deviceName:iPad Retina; version:9.2"
+
 # Root package for any JUnit acceptance tests
 serenity.test.root=org.example.features
 
@@ -16,6 +18,10 @@ serenity.test.root=org.example.features
 # Customise browser size
 #serenity.browser.height = 1200
 #serenity.browser.width = 1200
+
 webdriver.driver=chrome
 webdriver.chrome.driver=C:/drivers/chromedriver.exe
+
+
+#chrome_preferences.mobileEmulation.deviceName=Apple iPhone X
 
