Added mobile emulation support

--- a/lab5/serenity.properties
+++ b/lab5/serenity.properties
@@ -19,9 +19,14 @@ serenity.test.root=org.example.features
 #serenity.browser.height = 1200
 #serenity.browser.width = 1200
 
-webdriver.driver=chrome
-webdriver.chrome.driver=C:/drivers/chromedriver.exe
+#webdriver.driver=chrome
 
 
 #chrome_preferences.mobileEmulation.deviceName=Apple iPhone X
+
+webdriver.chrome.driver=C:/drivers/chromedriver.exe
+webdriver.driver = provided
+webdriver.provided.type = mydriver
+webdriver.provided.mydriver = org.example.ChromeMobileDriver
+thucydides.driver.capabilities = mydriver
 
